Fixed message squishing

--- a/src/app/app.component.styl
+++ b/src/app/app.component.styl
@@ -32,6 +32,7 @@ textarea
   padding: 1rem
   background-color: #fafafa
   overflow: scroll
+  height: 100%
 
 .logoContainer
   min-width: "calc(%s + (%s * 4))" % ($logo-width $logo-border-width)
